--- a/src/libggraph/Makefile.am
+++ b/src/libggraph/Makefile.am
@@ -7,4 +7,5 @@ libggraph_include_HEADERS = $(libbgraph_h)
 lib_LTLIBRARIES = libggraph-1.0.la
 libggraph_1_0_la_SOURCES = $(libggraph_c)
 libggraph_1_0_la_LDFLAGS = -version-info @libggraph_so_version@
-libbgraph_1_0_la_LIBADD = $(glib_LIBS)
+libggraph_1_0_la_LIBADD = $(glib_LIBS)
+libggraph_1_0_la_CFLAGS = $(glib_CFLAGS) -D_LIB_G_GRAPH_COMPILATION_ -I$(top_srcdir)/src -I$(top_srcdir)/src/libggraph
