Fixes to build system and source codes.
* Makefile.am: Added src to DIST_SUBDIRS. Fixed ChangeLog
generation.
* configure.ac: Added m4/Makefile to AC_CONFIG_FILES.
* m4/git_placeholder: Renamed to m4/Makefile.am.
* src/libggraph/ggraphtypedefs.h:
* src/libggraph/gsgraphtypedefs.h: New header files to fix
circular dependencies.
* src/libggraph.h: Added includes of two new headers.
* src/libggraph/Makefile.am: Fixed a typo.
* src/libggraph/ggraph.c:
* src/libggraph/ggraph.h:
* src/libggraph/ggrapharray.h:
* src/libggraph/ggraphedge.h:
* src/libggraph/ggraphedgearray.h:
* src/libggraph/gsgraph.c:
* src/libggraph/gsgraph.h:
* src/libggraph/gsgrapharray.h: Fixed compile time bugs.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = src
 
-DIST_SUBDIRS = m4
+DIST_SUBDIRS = src m4
 
 ACLOCAL_AMFLAGS = -I m4
 
@@ -9,7 +9,7 @@ dist-hook:
 	then \
 	        echo Creating ChangeLog && \
 	        ( cd "$(top_srcdir)" && \
-	          $(top_srcdir)/scripts/missing --run git log --date=short --pretty=format:"@@@@%cd  %an  <%ae>%n%n%s%n%n%b" | \
+	          $(top_srcdir)/missing --run git log --date=short --pretty=format:"@@@@%cd  %an  <%ae>%n%n%s%n%n%b" | \
 	          @PERL@ -ne 'if ( m/^\s*$$/ ) { if (!$$blank) { print; $$blank=1; } } else {$$blank=0; if (!s/^@@@@// && !/^\t/) { print "\t"; } print; }') > ChangeLog.tmp \
 	        && mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
 	        || ( rm -f ChangeLog.tmp ; \
