Added documentation generation.
* Makefile.am: Added docs directory to subdirs. Added
--enable-gtk-doc to distcheck.
* TODO: Writing examples is left.
* autogen.sh: Added gtkdocize invocation.
* configure.ac: Added new makefiles for generation. Added
GTK_DOC_CHECK.
* docs/Makefile.am:
* docs/reference/Makefile.am:
* docs/reference/libggraph-docs.sgml:
* docs/reference/libggraph-section.txt: New files for docs.
* src/libggraph/ggraph.c:
* src/libggraph/ggrapharray.h:
* src/libggraph/ggraphedge.c:
* src/libggraph/ggraphedgearray.h:
* src/libggraph/ggraphtypedefs.h:
* src/libggraph/gsgraph.c:
* src/libggraph/gsgrapharray.h:
* src/libggraph/gsgraphtypedefs.h: Fixes in documentation.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,10 @@
-SUBDIRS = src
+SUBDIRS = src docs
 
-DIST_SUBDIRS = src m4
+DIST_SUBDIRS = $(SUBDIRS) m4
 
 ACLOCAL_AMFLAGS = -I m4
+
+DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc
 
 dist-hook:
 	@if test -d "$(srcdir)/.git"; \
