--- a/configure.ac
+++ b/configure.ac
@@ -63,8 +63,9 @@ AM_INIT_AUTOMAKE
 # Checks for programs.
 
 AC_PROG_CC
-AM_PROG_LIBTOOL
+AC_PROG_LIBTOOL
 AC_CHECK_PROGS(PERL, perl5 perl)
+GTK_DOC_CHECK([1.9])
 
 # Checks for libraries.
 
@@ -79,8 +80,13 @@ AC_SUBST(glib_LIBS)
 # Checks for library functions.
 
 AC_CONFIG_FILES([Makefile
+                 
                  m4/Makefile
+                 
                  src/Makefile
                  src/]LIBGGRAPH_LIBNAME[.pc
-                 src/]LIBGGRAPH_NAME[/Makefile])
+                 src/]LIBGGRAPH_NAME[/Makefile
+                 
+                 docs/Makefile
+                 docs/reference/Makefile])
 AC_OUTPUT
