Added example (and one placeholder) and fixed g_sgraph_remove bug.
* Makefile.am: Added examples directory to SUBDIRS.
* autogen.sh: Added colon on running ./configure.
* examples/Makefile.am:
* examples/Makefile.am_fragment:
* examples/graph/Makefile.am:
* examples/graph/graph.c:
* examples/simple_graph/Makefile.am:
* examples/simple_graph/simple_graph.c:
* examples/simple_graph/topology.dia:
* examples/simple_graph/topology.png: Added new examples. Example
in examples/graph is a placeholder.
* src/libggraph/gsgraph.h: g_sgraph_neighbours now returns const
pointer.
* src/libggraph/gsgraph.c: Same as above. Fixed g_sgraph_remove.
It didn't iterate on all its neighbours, because neighbours were
modified with each call to g_sgraph_break_connection. The same bug
in GGraphs still exists.

--- a/configure.ac
+++ b/configure.ac
@@ -62,7 +62,7 @@ AM_INIT_AUTOMAKE
 
 # Checks for programs.
 
-AC_PROG_CC
+AM_PROG_CC_C_O
 AC_PROG_LIBTOOL
 AC_CHECK_PROGS(PERL, perl5 perl)
 GTK_DOC_CHECK([1.9])
@@ -80,13 +80,17 @@ AC_SUBST(glib_LIBS)
 # Checks for library functions.
 
 AC_CONFIG_FILES([Makefile
-                 
+
                  m4/Makefile
-                 
+
                  src/Makefile
                  src/]LIBGGRAPH_LIBNAME[.pc
                  src/]LIBGGRAPH_NAME[/Makefile
-                 
+
                  docs/Makefile
-                 docs/reference/Makefile])
+                 docs/reference/Makefile]
+
+                 examples/Makefile
+                 examples/simple_graph/Makefile
+                 examples/graph/Makefile)
 AC_OUTPUT
