Minor changes in build system.
* autogen.sh: Cleanup. Added option for not running configure.
* configure.ac: Changed deprecated AC_PROG_LIBTOOL to LT_INIT.

--- a/configure.ac
+++ b/configure.ac
@@ -63,7 +63,7 @@ AM_INIT_AUTOMAKE
 # Checks for programs.
 
 AM_PROG_CC_C_O
-AC_PROG_LIBTOOL
+LT_INIT
 AC_CHECK_PROGS(PERL, perl5 perl)
 GTK_DOC_CHECK([1.9])
 
