Changed maintainer email.
* configure.ac: Changed maintainer email to one on gmail.com
because svn.gnome.org alias stopped working.

--- a/configure.ac
+++ b/configure.ac
@@ -16,7 +16,7 @@ m4_define([LIBGGRAPH_SO_VERSION], [LIBGGRAPH_SO_CURRENT:LIBGGRAPH_SO_REVISION:LI
 m4_define([LIBGGRAPH_NAME_NO_LIB], [ggraph])
 m4_define([LIBGGRAPH_NAME], [lib[]LIBGGRAPH_NAME_NO_LIB])
 m4_define([LIBGGRAPH_LIBNAME], [LIBGGRAPH_NAME-LIBGGRAPH_API_VERSION])
-m4_define([LIBGGRAPH_MAINTAINER_MAIL], [krnowak@svn.gnome.org])
+m4_define([LIBGGRAPH_MAINTAINER_MAIL], [qdlacz@gmail.com])
 
 AC_PREREQ([2.63])
 AC_INIT(LIBGGRAPH_LIBNAME, LIBGGRAPH_VERSION, LIBGGRAPH_MAINTAINER_MAIL)
