Added automated version information to documentation.
* configure.ac: Added docs/reference/version.xml to
AC_CONFIG_FILES.
* docs/reference/Makefile.am: Added version.xml.in to EXTRA_DIST.
* docs/reference/libggraph-docs.sgml: Adapted to include automatic
version information. Some fixes.
* docs/reference/version.xml.in: New file holding current version
of libggraph.

--- a/configure.ac
+++ b/configure.ac
@@ -88,9 +88,10 @@ AC_CONFIG_FILES([Makefile
                  src/]LIBGGRAPH_NAME[/Makefile
 
                  docs/Makefile
-                 docs/reference/Makefile]
+                 docs/reference/Makefile
+                 docs/reference/version.xml
 
                  examples/Makefile
                  examples/simple_graph/Makefile
-                 examples/graph/Makefile)
+                 examples/graph/Makefile])
 AC_OUTPUT
