Partially remove GGraph stuff.
* configure.ac: Makefile in examples/graph won't be created now.
* examples/Makefile.am: Removed graph from SUBDIRS.
* examples/graph/Makefile.am:
* examples/graph/graph.c: Deleted.
* src/libggraph.h: Throw out all GGraph includes and put in all
GSGraph ones.
* src/libggraph/Makefile.am: Throw out all GGraph files from
building.

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS = simple_graph graph simple_graph_construct
+SUBDIRS = simple_graph simple_graph_construct
 
 EXTRA_DIST = Makefile.am_fragment
