--- a/configure.ac
+++ b/configure.ac
@@ -95,6 +95,5 @@ AC_CONFIG_FILES([Makefile
 
                  examples/Makefile
                  examples/simple_graph/Makefile
-                 examples/simple_graph_construct/Makefile
-                 examples/graph/Makefile])
+                 examples/simple_graph_construct/Makefile])
 AC_OUTPUT
