Some miscellaneous changes and stuff.
* .gitignore: New file.
* TODO: Updated.
* configure.ac: Modified .pc file creation.
* examples/Makefile.am_fragment: Hardcoded warning flags
temporarily.
* examples/simple_graph/simple_graph.c:
* examples/simple_graph_construct/simple_graph_construct.c:
Silenced warnings.
* src/libggraph-1.0.pc.in: Renamed to libggraph.pc.in.
* src/libggraph/Makefile.am: Modified some variables to avoid
explicit API version writing. Also hardcoded some warning flags
temporarily.

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,43 @@
+## general
 Makefile
 Makefile.in
 .deps
 .libs
-config.*
-INSTALL
-aclocal.m4
-compile
-configure
-depcomp
-docs/reference/version.xml
-doltcompile
-doltlibtool
-gtk-doc.make
-install-sh
+*.l[ao]
+*.[ao]
+*.pc
+stamp-*
+
+## root
+/config.*
+/INSTALL
+/aclocal.m4
+/compile
+/configure
+/depcomp
+/doltcompile
+/doltlibtool
+/gtk-doc.make
+/install-sh
 libtool
-ltmain.sh
-autom4te.cache
-m4/lt*
-m4/libtool.m4
-m4/gtk-doc.m4
-missing
-src/libggraph-1.0.pc
-stamp-h1
+/ltmain.sh
+/autom4te.cache/
+/missing
+
+## m4
+/m4/lt*
+/m4/libtool.m4
+/m4/gtk-doc.m4
+
+## docs
+/docs/reference/
+!docs/reference/libggraph-docs.sgml
+!docs/reference/libggraph-sections.txt
+!docs/reference/version.xml.in
+!docs/reference/Makefile.am
+
+## examples
+
+/examples/graph/graph
+/examples/simple_graph/simple_graph
+/examples/simple_graph_construct/simple_graph_construct
