--- a/src/libggraph/Makefile.am
+++ b/src/libggraph/Makefile.am
@@ -10,8 +10,8 @@ libggraph_h = 			\
 libggraph_includedir = $(includedir)/@libggraph_libname@/@libggraph_name@
 libggraph_include_HEADERS = $(libggraph_h)
 
-lib_LTLIBRARIES = libggraph-1.0.la
-libggraph_1_0_la_SOURCES = $(libggraph_c)
-libggraph_1_0_la_LDFLAGS = -version-info @libggraph_so_version@
-libggraph_1_0_la_LIBADD = $(glib_LIBS)
-libggraph_1_0_la_CFLAGS = $(glib_CFLAGS) -D_LIB_G_GRAPH_COMPILATION_ -I$(top_srcdir)/src -I$(top_srcdir)/src/libggraph
+lib_LTLIBRARIES = libggraph-@libggraph_api_version@.la
+libggraph_@libggraph_api_version@_la_SOURCES = $(libggraph_c)
+libggraph_@libggraph_api_version@_la_LDFLAGS = -version-info @libggraph_so_version@
+libggraph_@libggraph_api_version@_la_LIBADD = $(glib_LIBS)
+libggraph_@libggraph_api_version@_la_CFLAGS = $(glib_CFLAGS) -D_LIB_G_GRAPH_COMPILATION_ -I$(top_srcdir)/src -I$(top_srcdir)/src/libggraph -pedantic -Wall -Wextra -Werror
