--- a/examples/Makefile.am_fragment
+++ b/examples/Makefile.am_fragment
@@ -2,5 +2,5 @@ local_lib = $(top_builddir)/src/libggraph/$(libggraph_libname).la
 
 examples_ldadd = $(local_lib) @glib_LIBS@
 
-examples_include = -I$(top_builddir)/src -I$(top_srcdir)/src @glib_CFLAGS@
+examples_include = -I$(top_builddir)/src -I$(top_srcdir)/src @glib_CFLAGS@ -pedantic -Wall -Wextra -Werror
 
