Build system and code reorganization.
* .gitignore: Updated to ignore files in new locations.
* AUTHORS: Changed obsolete email address.
* Makefile.am: Changed ACLOCAL_AMFLAGS and added new directories
to SUBDIRS.
* autogen.sh: Remove PROJECT variable.
* build/placeholder: New file to keep empty directory in git.
* configure.ac: Macros, build config and aux are in build/ now.
Added checks for gobject - they will be needed later. Changed
output because of layout change. Got rid of dolt.
* docs/reference/Makefile.am: Some changes because of layout
change. sections.txt file is now rebuild and thus is distcleaned.
* docs/reference/libggraph-docs.sgml:
* docs/reference/libggraph-sections.txt:
* examples/Makefile.am_fragment: Some changes because of layout
change. Mostly paths.
* examples/simple_graph/simple_graph.c:
* examples/simple_graph_construct/simple_graph_construct.c: Changes
because of data types renaming.
* gsgraph/Makefile.am: Renamed some variables and changed library
name.
* gsgraph/*.h:
* gsgraph/*.c: Changed GSGraph to GSGraphNode and updated all
source and header files. Most of them were also moved from
src/libggraph/ directory.
* m4/Makefile.am: Renamed to placeholder, because it was useless
when project got rid of dolt.
* m4/dolt.m4: Delete obsolete file.
* pc/Makefile.am: New file in new directory holding pkg-config
files.
* pc/gsgraph.pc.in: Moved and renamed from src/libggraph/.

--- a/.gitignore
+++ b/.gitignore
@@ -9,25 +9,17 @@ Makefile.in
 stamp-*
 
 ## root
-/config.*
-/INSTALL
 /aclocal.m4
-/compile
-/configure
-/depcomp
-/doltcompile
-/doltlibtool
-/gtk-doc.make
-/install-sh
-libtool
-/ltmain.sh
 /autom4te.cache/
-/missing
+/config.*
+/configure
+/gtk-doc.make
+/INSTALL
+/libtool
 
-## m4
-/m4/lt*
-/m4/libtool.m4
-/m4/gtk-doc.m4
+## build
+/build/
+!/build/placeholder
 
 ## docs
 /docs/reference/
@@ -37,7 +29,5 @@ libtool
 !docs/reference/Makefile.am
 
 ## examples
-
-/examples/graph/graph
 /examples/simple_graph/simple_graph
 /examples/simple_graph_construct/simple_graph_construct
