--- a/examples/Makefile.am_fragment
+++ b/examples/Makefile.am_fragment
@@ -1,6 +1,6 @@
-local_lib = $(top_builddir)/src/libggraph/$(libggraph_libname).la
+local_lib = $(top_builddir)/gsgraph/libgsgraph-@libggraph_api_version@.la
 
 examples_ldadd = $(local_lib) @glib_LIBS@
 
-examples_include = -I$(top_builddir)/src -I$(top_srcdir)/src @glib_CFLAGS@ -pedantic -Wall -Wextra -Werror
+examples_include = -I$(top_builddir)/ -I$(top_srcdir)/ @glib_CFLAGS@ -pedantic -Wall -Wextra -Werror
 
