Fix installation of .pc file.
* configure.ac: Added pc/Makefile.am to AC_CONFIG_FILES.
* pc/Makefile.am: Fixed .pc file name. Removed redundant
EXTRA_DIST.

--- a/pc/Makefile.am
+++ b/pc/Makefile.am
@@ -1,4 +1,2 @@
 libggraph_pkgconfigdir = $(libdir)/pkgconfig
-libggraph_pkgconfig_DATA = @libggraph_libname@.pc
-
-EXTRA_DIST = gsgraph.pc.in
+libggraph_pkgconfig_DATA = gsgraph-@libggraph_api_version@.pc
