Better warning, ChangeLog generation systems and docs fixes.
* Makefile.am:
* build/dist-changelog.am: Added better ChangeLog generation
system. Instead of depending on whole mm-common, a part of it was
taken and modified a bit.
* build/mm-standalone-warnings.m4:
* configure.ac: Use better warning system - also borrowed from
mm-common and modified a bit. In configure.ac - fixed .pc file
generation in AC_CONFIG_FILES_OUTPUT, added docs.sgml to it,
changed package name to libggraph.
* docs/reference/Makefile.am: sections file is again rebuilt, set
some ignores and so on.
* docs/reference/libggraph-docs.sgml.in: This file is now processed
by configure just to insert library and API versions.
* docs/reference/version.xml.in: Deleted.
* examples/Makefile.am: Removed EXTRA_DIST.
* examples/examples.am: Renamed from Makefile.am_fragment. Better
name and automagically distributed. Use better warning system.
* examples/simple_graph/Makefile.am:
* examples/simple_graph_construct/Makefile.am: Include examples.am
now.
* gsgraph/Makefile.am: Use better warning system.
* gsgraph/gsgraph*: Fix docs.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,21 +1,7 @@
 SUBDIRS = gsgraph docs examples pc
 
-DIST_SUBDIRS = $(SUBDIRS) build
-
 ACLOCAL_AMFLAGS = -I build
 
-DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc
+DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc --enable-warnings=fatal
 
-dist-hook:
-	@if test -d "$(srcdir)/.git"; \
-	then \
-	        echo Creating ChangeLog && \
-	        ( cd "$(top_srcdir)" && \
-	          $(top_srcdir)/missing --run git log --date=short --pretty=format:"@@@@%cd  %an  <%ae>%n%n%s%n%n%b" | \
-	          @PERL@ -ne 'if ( m/^\s*$$/ ) { if (!$$blank) { print; $$blank=1; } } else {$$blank=0; if (!s/^@@@@// && !/^\t/) { print "\t"; } print; }') > ChangeLog.tmp \
-	        && mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
-	        || ( rm -f ChangeLog.tmp ; \
-	             echo Failed to generate ChangeLog >&2 ); \
-	else \
-	        echo A git clone is required to generate a ChangeLog >&2; \
-	fi
+include $(top_srcdir)/build/dist-changelog.am
