--- a/docs/reference/libggraph-docs.sgml.in
+++ b/docs/reference/libggraph-docs.sgml.in
@@ -3,13 +3,12 @@
                "http://www.oasis-open.org/docbook/xml/4.3/docbookx.dtd"
 [
   <!ENTITY % local.common.attrib "xmlns:xi  CDATA  #FIXED 'http://www.w3.org/2003/XInclude'">
-  <!ENTITY version SYSTEM "version.xml">
 ]>
 <book id="index">
   <bookinfo>
     <title>libGGraph Reference Manual</title>
     <releaseinfo>
-      for libggraph &version;
+      for libggraph $(libggraph_version), API version $(libggraph_api_version)
       <!--
       The latest version of this documentation can be found on-line at
       <ulink role="online-location" url="http://[SERVER]/libggraph/index.html">http://[SERVER]/libggraph/</ulink>.
