--- a/examples/simple_graph_construct/Makefile.am
+++ b/examples/simple_graph_construct/Makefile.am
@@ -1,4 +1,4 @@
-include $(top_srcdir)/examples/Makefile.am_fragment
+include $(top_srcdir)/examples/examples.am
 
 #Build the executable, but don't install it.
 noinst_PROGRAMS = simple_graph_construct
@@ -7,4 +7,4 @@ simple_graph_construct_SOURCES = simple_graph_construct.c
 simple_graph_construct_CFLAGS = $(examples_include)
 simple_graph_construct_LDADD = $(examples_ldadd)
 
-EXTRA_DIST = topology.dia topology.png
+dist_noinst_DATA = topology.dia topology.png
