Add GSGraphWhole to build system.
* gsgraph/Makefile.am: Added gsgraphwhole.(c|h) and gsgraphenums.h
to build system.

--- a/gsgraph/Makefile.am
+++ b/gsgraph/Makefile.am
@@ -1,10 +1,12 @@
 gsgraph_c = 			\
 	gsgraphnode.c		\
+	gsgraphwhole.c		\
 	gsgraphdatapair.c
 
 gsgraph_h = 			\
 	$(gsgraph_c:.c=.h)	\
-	gsgraph.h
+	gsgraph.h		\
+	gsgraphenums.h
 
 gsegraph_c = 			\
 	gsegraphnode.c		\
