Add new documentation to generation.
* docs/reference/libggraph-docs.sgml.in: Added some links to
chapter about GSGraph.
* docs/reference/libggraph-sections.txt: Adapted to new
documentation.

--- a/docs/reference/libggraph-docs.sgml.in
+++ b/docs/reference/libggraph-docs.sgml.in
@@ -20,7 +20,8 @@
     <title>GSGraph overview</title>
     <xi:include href="xml/gsgraphnode.xml"/>
     <xi:include href="xml/gsgraphdatapair.xml"/>
-    <xi:include href="xml/gsgraphnodearray.xml"/>
+    <xi:include href="xml/gsgraphenums.xml"/>
+    <xi:include href="xml/gsgraphwhole.xml"/>
   </chapter>
 
   <chapter>
