Fixes in examples.
* configure.ac: Update paths to examples.
* .gitignore.ac: Added new ignore entry to new example.
* examples/sgraph_construct/sgraph_construct.c:
* examples/sgraph_subgraphs/sgraph_subgraphs.c:
* examples/sgraph_traversing/sgraph_traversing.c: Fixed compilation
and nitpicking errors.
* examples/example-path.am: New file containing path to examples.
* examples/README: New file describing examples.
* examples/Makefile.am: Install readme in examples directory.
* examples/example-dist.am: Updated to use example-path.am.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ stamp-*
 ## examples
 /examples/sgraph_traversing/sgraph_traversing
 /examples/sgraph_construct/sgraph_construct
+/examples/sgraph_subgraphs/sgraph_subgraphs
