--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,1 +1,6 @@
 SUBDIRS = sgraph_traversing sgraph_construct sgraph_subgraphs
+
+include $(top_srcdir)/examples/example-path.am
+
+readmedir = $(example_path)
+readme_DATA = README
